--- a/components/componentversion.yaml
+++ b/components/componentversion.yaml
@@ -11,7 +11,7 @@ spec:
   repository:
     url: ghcr.io/sidhishruti22
     secretRef:
-      name: oci-creds
+      name: creds
   verify: []
   references:
     expand: true
