--- a/components/resource.yaml
+++ b/components/resource.yaml
@@ -1,7 +1,7 @@
 apiVersion: delivery.ocm.software/v1alpha1
 kind: Resource
 metadata:
-  name: podinfo-deployment
+  name: sidhi-podinfo-deployment
   namespace: ocm-system
 spec:
   interval: 1m0s
