--- a/podinfo/references.yaml
+++ b/podinfo/references.yaml
@@ -1,11 +1,11 @@
 name: backend
-componentName: github.com/weaveworks/backend
+componentName: github.com/sidhishruti22/backend
 version: v1.1.2
 ---
 name: frontend
-componentName: github.com/weaveworks/frontend
+componentName: github.com/sidhishruti22/frontend
 version: v1.1.2
 ---
 name: cache
-componentName: github.com/weaveworks/cache
+componentName: github.com/sidhishruti22/cache
 version: v1.1.2
