--- a/components/componentversion.yaml
+++ b/components/componentversion.yaml
@@ -1,7 +1,7 @@
 apiVersion: delivery.ocm.software/v1alpha1
 kind: ComponentVersion
 metadata:
-  name: podify
+  name: multipodify
   namespace: ocm-system
 spec:
   interval: 10m0s
