--- a/podinfo/backend/configdata.yaml
+++ b/podinfo/backend/configdata.yaml
@@ -6,6 +6,7 @@ metadata:
     env: test
 configuration:
   defaults:
+    replicas: 2
     message: "Welcome to the backend service"
   schema:
     type: object
@@ -16,6 +17,9 @@ configuration:
       message:
         type: string
   rules:
+  - value: (( replicas ))
+    file: deploy.yaml
+    path: spec.replicas
   - value: (( message ))
     file: configmap.yaml
     path: data.PODINFO_UI_MESSAGE
