--- a/podinfo/frontend/manifests/deploy.yaml
+++ b/podinfo/frontend/manifests/deploy.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: frontend
 spec:
+  replicas: 1
   minReadySeconds: 3
   revisionHistoryLimit: 5
   progressDeadlineSeconds: 60
