--- a/components/backend_localization.yaml
+++ b/components/backend_localization.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   configRef:
     kind: ComponentVersion
-    name: multiocmpodify
+    name: multiocmpodify1
     namespace: ocm-system
     resourceRef:
       name: config
@@ -17,7 +17,7 @@ spec:
   interval: 10m0s
   sourceRef:
     kind: ComponentVersion
-    name: multiocmpodify
+    name: multiocmpodify1
     namespace: ocm-system
     resourceRef:
       name: manifests
