--- a/components/componentversion.yaml
+++ b/components/componentversion.yaml
@@ -1,10 +1,10 @@
 apiVersion: delivery.ocm.software/v1alpha1
 kind: ComponentVersion
 metadata:
-  name: multiocmpodify
+  name: multiocmpodify11
   namespace: ocm-system
 spec:
-  interval: 10m0s
+  interval: 2m0s
   component: github.com/sidhishruti22/ocmmultipodinfo
   version:
     semver: v1.1.7
